force-app/main/default/objects/Application__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>Auto-generated application number</description>
    <displayFormat>APP-{000000}</displayFormat>
    <label>Application Number</label>
    <type>AutoNumber</type>
</CustomField>