force-app/main/default/objects/Application__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>The date when the application was approved or rejected</description>
    <inlineHelpText>Leave blank until the application is reviewed</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>