force-app/main/default/objects/Application__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Status with visual status indicators (text/emojis)</description>
    <formula>IF(ISPICKVAL(Status__c, &apos;Approved&apos;), &apos;✅ Approved&apos;, IF(ISPICKVAL(Status__c, &apos;Rejected&apos;), &apos;❌ Rejected&apos;, IF(ISPICKVAL(Status__c, &apos;In Review&apos;), &apos;⏳ In Review&apos;, &apos;🆕 New&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visual indicators of the application approval status</inlineHelpText>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>