force-app/main/default/objects/Application__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Reviewer feedback and evaluation comments</description>
    <inlineHelpText>Enter any additional feedback or comments</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>