force-app/main/default/objects/Application__c/fields/Course_Fee__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee__c</fullName>
    <defaultValue>10000.00</defaultValue>
    <description>The fee set for this specific course application</description>
    <inlineHelpText>Enter the total cost/fee for this course application</inlineHelpText>
    <label>Course Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>