force-app/main/default/objects/Application__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <formula>IF (
  OR (
    AND (
      ISPICKVAL (Project__r.Skills__c, &quot;Salesforce&quot;),
      INCLUDES (Freelancer__r.Skills__c, &quot;Salesforce&quot;)
    ),
    AND (
      ISPICKVAL (Project__r.Skills__c, &quot;Java&quot;),
      INCLUDES (Freelancer__r.Skills__c, &quot;Java&quot;)
    ),
    AND (
      ISPICKVAL (Project__r.Skills__c, &quot;Python&quot;),
      INCLUDES (Freelancer__r.Skills__c, &quot;Python&quot;)
    ),
    AND (
      ISPICKVAL (Project__r.Skills__c, &quot;React&quot;),
      INCLUDES (Freelancer__r.Skills__c, &quot;React&quot;)
    )
  ),
  50,
  0
) + IF (Freelancer__r.Experience__c &gt;= Project__r.Experience__c, 50, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>