force-app/main/default/objects/Application__c/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <description>Calculated balance remaining to be paid for the course</description>
    <formula>Course_Fee__c - BLANKVALUE(Total_Payments__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Outstanding balance remaining on this course application</inlineHelpText>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>