force-app/main/default/objects/Application__c/fields/Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Count__c</fullName>
    <description>Total number of payments submitted for this application</description>
    <label>Payment Count</label>
    <summaryForeignKey>Payment__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>