force-app/main/default/objects/Application__c/fields/Stating_project__c.field-meta.xml
<CustomField>
    <fullName>Stating_project__c</fullName>
    <label>Stating project</label>
    <type>DateTime</type>
</CustomField>