force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the application in the lifecycle</description>
    <inlineHelpText>Select the current application status</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>High Match</fullName>
                <isActive>false</isActive>
                <label>High Match</label>
            </value>
            <value>
                <fullName>Low Match</fullName>
                <isActive>false</isActive>
                <label>Low Match</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Selected</fullName>
                <isActive>false</isActive>
                <label>Selected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>