force-app/main/default/objects/Application__c/validationRules/Status_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Project is Closed,Cannot Apply.</errorMessage>
</ValidationRule>