force-app/main/default/objects/Application__c/validationRules/Total_Payments_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Payments_NonNegative</fullName>
    <active>true</active>
    <description>Ensure Total Payments is non‑negative</description>
    <errorConditionFormula>Total_Payments__c &lt; 0</errorConditionFormula>
    <errorMessage>Total Payments must be greater than or equal to zero.</errorMessage>
</ValidationRule>