force-app/main/default/objects/Application__c/listViews/All_Applications.listView-meta.xml
<ListView>
    <fullName>All_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Number__c</columns>
    <columns>Student__c</columns>
    <columns>Course__c</columns>
    <columns>Intake__c</columns>
    <columns>Status__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Applications</label>
</ListView>