force-app/main/default/objects/Application__c/listViews/In_Review_Applications.listView-meta.xml
<ListView>
    <fullName>In_Review_Applications</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Course__c</columns>
    <columns>Intake__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>In Review Applications</label>
</ListView>